deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-canary
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        track: canary
        version: 2.0.0
    spec:
      containers:
        - name: app
          image: us.gcr.io/linear-stock-388107/app-engine-tmp/app:2.0.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-storage
              mountPath: /app/storage
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
