ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: app-ip
  generation: 4
  labels:
    app: app
  name: app
  namespace: app
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: app
            port:
              number: 3000
        path: /
        pathType: Prefix
